--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
@@ -9,20 +8,37 @@
   <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js"></script>
   <style>
     body { font-family: sans-serif; margin: 1em; }
+    #filter-bar { max-width: 1100px; margin: auto; margin-bottom: 1em; display: flex; align-items: center; }
     #calendar { max-width: 1100px; margin: auto; }
     .fc-event.critical { background-color: #ffdddd !important; }
     .fc-event.changed { border: 2px solid red !important; }
+    #courseSelect { margin-left: 0.5em; padding: 0.2em; font-size: 1em; }
   </style>
 </head>
 <body>
   <h2>📅 113-2 重補修課程查詢日曆</h2>
+  <div id="filter-bar">
+    <label for="courseSelect">篩選課程：</label>
+    <select id="courseSelect"><option value="">全部</option></select>
+  </div>
   <div id="calendar"></div>
 
 <script>
 const apiUrl = "https://script.google.com/macros/s/AKfycbxbpuFcInB-xFFGSVJReKEbp2DE5k8mDs8aKx80o94_fICApzgZ7_RI-j2kbDikG0jo/exec";
 
-// 頁面加下拉式選單
-document.write('<label for="courseSelect">篩選課程：</label><select id="courseSelect"><option value="">全部</option></select>');
+// 新增：排序工具（年級＞科目＞時間）
+function courseSortKey(courseName) {
+  // 範例: "三上 數學A"
+  // 取出"三上"排序用
+  const match = courseName.match(/^([一二三])[上下]/);
+  let n = 0;
+  if (match) {
+    if (match[1] === '一') n = 1;
+    if (match[1] === '二') n = 2;
+    if (match[1] === '三') n = 3;
+  }
+  return n + courseName;
+}
 
 let allData = [];
 let calendar = null;
@@ -32,8 +48,10 @@ document.addEventListener('DOMContentLoaded', async function () {
   const data = await res.json();
   allData = data;
 
-  // 取所有課程名稱，組成下拉選單
-  const courses = [...new Set(data.map(item => getCourseLabel(item)))];
+  // 取所有課程名稱，排序後做下拉
+  const courses = [...new Set(data.map(item => getCourseLabel(item)))].sort((a, b) => {
+    return courseSortKey(a) > courseSortKey(b) ? 1 : -1;
+  });
   const select = document.getElementById('courseSelect');
   courses.forEach(c => {
     const opt = document.createElement('option');
@@ -56,10 +74,7 @@ document.addEventListener('DOMContentLoaded', async function () {
 });
 
 function getCourseLabel(item) {
-  // 這裡你可依需求修改，範例：「三上 數學A」
-  // 課程名稱常常有年級、科目等關鍵字
-  // 這裡假設「課程名稱」已經是你想顯示的內容，如需更精細可自行分割
-  // 可用正則從「課程名稱」撈出「年級」、「科目」等
+  // 最清楚的格式，先顯示年級科目再附加班級（如適用）
   return item["課程名稱"].replace(/\s+/g, ' ').trim();
 }
 
@@ -72,10 +87,12 @@ function renderCalendar(data) {
     if (mm && mm.length === 1) mm = "0" + mm;
     if (dd && dd.length === 1) dd = "0" + dd;
     const dateFixed = `${yyyy}-${mm}-${dd}`;
-    // 優先顯示「起訖時間」、「課程」、「教師」等重點
+    // 改：課程名稱優先（新版title組成）
     const startTime = item["起始時間"]?.slice(0,5);
     const endTime = item["結束時間"]?.slice(0,5);
-    const title = `${startTime}-${endTime} ${getCourseLabel(item)}`;
+    const course = getCourseLabel(item);
+    // title優先顯示課程名稱、教師、時間
+    const title = `${course}\n${startTime}-${endTime} ${item["教師"]||""}`;
     return {
       title: title,
       start: `${dateFixed}T${item["起始時間"]}`,
@@ -90,13 +107,17 @@ function renderCalendar(data) {
   if (calendar) calendar.destroy();
 
   calendar = new FullCalendar.Calendar(document.getElementById('calendar'), {
-    initialView: 'dayGridMonth',
+    initialView: 'timeGridWeek', // 周視圖（預設周表，避免重疊）
     locale: 'zh-tw',
     headerToolbar: {
       left: 'prev,next today',
       center: 'title',
       right: 'dayGridMonth,timeGridWeek,listWeek'
     },
+    // 新功能2：週表顯示以 row 堆疊（不重疊）
+    slotMinTime: "07:00:00",
+    slotMaxTime: "20:00:00",
+    allDaySlot: false,
     events,
     eventDidMount: function(info) {
       const p = info.event.extendedProps;
@@ -107,15 +128,22 @@ function renderCalendar(data) {
         `堂數：${p["當前堂數"]}/${p["總堂數"]}\n` +
         `備註：${p["備註"] || ""}`;
       info.el.title = tooltip;
+      // title多行顯示
+      info.el.style.whiteSpace = "pre-line";
+      info.el.style.fontSize = "1em";
     },
-    eventOrder: "title,start", // 依照標題（年級科目）排序
-    eventMaxStack: 4, // 一天最多顯示幾筆，否則加顯示「+X more」
+    // 課程排序依「課程名稱」及開始時間
+    eventOrder: "title,start",
+    eventMaxStack: 99,  // 讓事件全部以row方式展開，不顯示「+X more」
     nowIndicator: true,
     slotLabelFormat: {
       hour: '2-digit',
       minute: '2-digit',
       hour12: false
-    }
+    },
+    dayMaxEvents: false, // 關閉日曆「+X more」
+    // 強制不重疊
+    eventOverlap: false
   });
 
   calendar.render();
@@ -137,3 +165,4 @@ function getClass(item) {
 
 </body>
 </html>
+
