--- a/index.html
+++ b/index.html
@@ -116,17 +116,46 @@ function renderCalendar(data) {
     const startTime = item["起始時間"]?.slice(0,5);
     const endTime = item["結束時間"]?.slice(0,5);
     const course = getCourseLabel(item);
-    // 「課程名稱」加粗顏色，時間下方換行
     const title = `${course}\n${startTime}-${endTime}${item["教師"] ? " " + item["教師"] : ""}`;
+    // 顏色資訊掛進 extendedProps
     return {
       title: title,
       start: `${dateFixed}T${item["起始時間"]}`,
       end: `${dateFixed}T${item["結束時間"]}`,
       backgroundColor: getColorByName(item["課程名稱"]),
+      textColor: "#222",
       classNames: getClass(item),
-      extendedProps: item
+      extendedProps: { ...item, bg: getColorByName(item["課程名稱"]) }
     };
   });
+
+  if (calendar) calendar.destroy();
+
+  calendar = new FullCalendar.Calendar(document.getElementById('calendar'), {
+    initialView: 'dayGridMonth',
+    locale: 'zh-tw',
+    headerToolbar: {
+      left: 'prev,next today',
+      center: 'title',
+      right: 'dayGridMonth,timeGridWeek,listWeek'
+    },
+    events,
+    eventOrder: "title,start",
+    dayMaxEvents: false,
+    nowIndicator: true,
+    eventOverlap: false,
+    eventDidMount: function(info) {
+      // 對所有檢視都改背景色
+      info.el.style.backgroundColor = info.event.extendedProps.bg;
+      info.el.style.color = "#222";
+      info.el.style.borderRadius = "6px";
+      info.el.style.border = "none";
+      info.el.title = ""; // 不用原生 tooltip
+    }
+  });
+
+  calendar.render();
+}
 
   if (calendar) calendar.destroy();
 
