--- a/index.html
+++ b/index.html
@@ -116,16 +116,16 @@ function renderCalendar(data) {
     const startTime = item["起始時間"]?.slice(0,5);
     const endTime = item["結束時間"]?.slice(0,5);
     const course = getCourseLabel(item);
+    const color = getColorByName(item["課程名稱"]);
     const title = `${course}\n${startTime}-${endTime}${item["教師"] ? " " + item["教師"] : ""}`;
-    // 顏色資訊掛進 extendedProps
     return {
       title: title,
       start: `${dateFixed}T${item["起始時間"]}`,
       end: `${dateFixed}T${item["結束時間"]}`,
-      backgroundColor: getColorByName(item["課程名稱"]),
+      color: color,
       textColor: "#222",
       classNames: getClass(item),
-      extendedProps: { ...item, bg: getColorByName(item["課程名稱"]) }
+      extendedProps: { ...item, bg: color }
     };
   });
 
@@ -145,12 +145,23 @@ function renderCalendar(data) {
     nowIndicator: true,
     eventOverlap: false,
     eventDidMount: function(info) {
-      // 對所有檢視都改背景色
-      info.el.style.backgroundColor = info.event.extendedProps.bg;
-      info.el.style.color = "#222";
-      info.el.style.borderRadius = "6px";
-      info.el.style.border = "none";
-      info.el.title = ""; // 不用原生 tooltip
+      // 無論哪一種檢視都用 inline style 覆蓋
+      const color = info.event.extendedProps.bg;
+      // 月檢視
+      if (info.el.classList.contains("fc-daygrid-event")) {
+        info.el.style.backgroundColor = color;
+        info.el.style.color = "#222";
+        info.el.style.borderRadius = "7px";
+        info.el.style.border = "none";
+      }
+      // 週檢視或 list 檢視
+      if (info.el.classList.contains("fc-timegrid-event") || info.el.classList.contains("fc-list-event")) {
+        info.el.style.backgroundColor = color;
+        info.el.style.color = "#222";
+        info.el.style.borderRadius = "7px";
+        info.el.style.border = "none";
+      }
+      info.el.title = ""; // 移除原生 tooltip
     }
   });
 
