--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   </style>
 </head>
 <body>
-  <h2>📅 113-2 重補修課程查詢日曆</h2>
+  <h2>📅 113-2 國立花蓮高商重補修課程查詢日曆</h2>
   <div id="filter-bar">
     <label for="courseSelect">篩選課程：</label>
     <select id="courseSelect"><option value="">全部</option></select>
