--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       #calendar, #list-container { width: 100%; font-size: 0.96em;}
       #filter-bar { font-size: 1.1em;}
     }
-    /* 保證所有事件視圖都繼承JS設置字色 */
+    /* 事件視圖都繼承JS設置字色 */
     .fc-event, .fc-event-title, .fc-timegrid-event .fc-event-title, .fc-daygrid-event .fc-event-title {
       color: inherit !important;
     }
@@ -113,6 +113,29 @@ function getColorByName(name) {
   return colors[hash % colors.length];
 }
 
+// 狀態icon/顏色：回傳 {icon, color}
+function getCourseStatus(courseName, eventDate, allData) {
+  // 收集這個課程所有場次
+  const allEvents = allData.filter(x => getCourseLabel(x) === courseName)
+    .sort((a, b) => new Date(a["日期"]) - new Date(b["日期"]));
+  const total = parseInt(allEvents[0]["總堂數"] || allEvents.length);
+  // 計算已經上的堂數（以今日為準）
+  const today = new Date();
+  const eventDay = new Date(eventDate);
+  // 最後一天
+  const lastDay = new Date(allEvents[allEvents.length - 1]["日期"]);
+  // 到目前為止的事件
+  const finishedCount = allEvents.filter(e => new Date(e["日期"]) < today).length;
+  if (today > lastDay) {
+    return { icon: "🔴", color: "#e74c3c", label: "已結束" }; // 已結束
+  }
+  if (finishedCount < total / 3) {
+    return { icon: "🟢", color: "#27ae60", label: "剛開始" }; // 進行中未達1/3
+  } else {
+    return { icon: "🟡", color: "#f7b731", label: "進行中已達1/3" }; // 進行中已達1/3
+  }
+}
+
 function renderCalendar(data) {
   const events = data.map(item => {
     let date = item["日期"];
@@ -125,14 +148,18 @@ function renderCalendar(data) {
     const startTime = item["起始時間"]?.slice(0,5);
     const endTime = item["結束時間"]?.slice(0,5);
     const course = getCourseLabel(item);
+
+    const status = getCourseStatus(course, date, allData);
+
     const bgColor = getColorByName(item["課程名稱"]);
-    const title = `${course}\n${startTime}-${endTime}${item["教師"] ? " " + item["教師"] : ""}`;
+    // icon放最前面，title靠右
+    const title = `${status.icon} ${course}\n${startTime}-${endTime}${item["教師"] ? " " + item["教師"] : ""}`;
     return {
       title: title,
       start: `${dateFixed}T${item["起始時間"]}`,
       end: `${dateFixed}T${item["結束時間"]}`,
       classNames: getClass(item),
-      extendedProps: { ...item, bg: bgColor }
+      extendedProps: { ...item, bg: bgColor, statusColor: status.color, statusLabel: status.label }
     };
   });
 
@@ -151,17 +178,16 @@ function renderCalendar(data) {
     dayMaxEvents: false,
     nowIndicator: true,
     eventOverlap: false,
-    // ★ 關鍵設定：讓 weekly 不重疊、全部都 stack 展開
     slotEventOverlap: false,
     eventMaxStack: 99,
     eventDidMount: function(info) {
-      // 月曆/週曆全都強制黑字
+      // icon不著色（emoji），背景色為課程色，字黑色
       info.el.style.backgroundColor = info.event.extendedProps.bg;
       info.el.style.color = "#222";
       info.el.style.setProperty('color', '#222', 'important');
       info.el.style.borderRadius = "7px";
       info.el.style.border = "none";
-      info.el.title = "";
+      info.el.title = info.event.extendedProps.statusLabel; // hover顯示狀態
     }
   });
 
@@ -179,6 +205,7 @@ function renderList(data) {
   });
   let html = `<table>
   <tr>
+    <th>狀態</th>
     <th>日期</th>
     <th>時間</th>
     <th>課程名稱</th>
@@ -193,7 +220,10 @@ function renderList(data) {
     date = date.replace(/\//g, "-");
     const startTime = item["起始時間"]?.slice(0,5);
     const endTime = item["結束時間"]?.slice(0,5);
+    const course = getCourseLabel(item);
+    const status = getCourseStatus(course, date, data);
     html += `<tr>
+      <td style="font-size:1.3em;">${status.icon}</td>
       <td>${date}</td>
       <td>${startTime}-${endTime}</td>
       <td style="font-weight:bold;color:#336;">${getCourseLabel(item)}</td>
